--- a/config.yaml
+++ b/config.yaml
@@ -61,7 +61,7 @@ params:
         readingTime: true
         license:
             enabled: true
-            default: Licensed under CC BY-NC-SA 4.0
+            default: Licensed under CC BY-NC-ND 4.0
 
     comments:
         enabled: false
