feat: configure giscus comment system with GitHub Discussions integration

--- a/config.yaml
+++ b/config.yaml
@@ -76,7 +76,7 @@ params:
 
     comments:
         enabled: true
-        provider: disqus
+        provider: giscus
 
         disqusjs:
             shortname:
@@ -137,15 +137,18 @@ params:
             siteName: "" # You must insert a unique identifier here matching the one you registered (See https://cactus.chat/docs/getting-started/quick-start/#register-your-site)
 
         giscus:
-            repo:
-            repoID:
-            category:
-            categoryID:
-            mapping:
-            lightTheme:
-            darkTheme:
+            repo: kirklin/blog
+            repoID: R_kgDOHvHVzA
+            category: Announcements
+            categoryID: DIC_kwDOHvHVzM4CpF_1
+            mapping: pathname
+            strict: 0
+            theme: preferred_color_scheme
             reactionsEnabled: 1
-            emitMetadata: 0
+            emitMetadata: 1
+            inputPosition: top
+            lang: zh-CN
+            loading: lazy
 
         gitalk:
             owner:
