--- a/config.yaml
+++ b/config.yaml
@@ -64,7 +64,7 @@ params:
         avatar:
             enabled: true
             local: true
-            src: img/avatar.jpeg
+            src: img/avatar.png
 
     article:
         math: true
