--- a/themes/theme/config.yaml
+++ b/themes/theme/config.yaml
@@ -25,7 +25,7 @@ params:
         avatar:
             enabled: true
             local: true
-            src: img/avatar.jpeg
+            src: img/avatar.png
 
     article:
         headingAnchor: false
